--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-persist-client": "^5.64.2",
     "@tanstack/react-store": "^0.7.0",
+    "@tanstack/store": "^0.7.0",
     "@types/bcrypt": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
