--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
     "@auth/prisma-adapter": "^2.7.4",
+    "@lottiefiles/dotlottie-react": "^0.13.1",
     "@prisma/client": "^6.2.1",
     "@tanstack/query-sync-storage-persister": "^5.64.2",
     "@tanstack/react-query": "^5.64.2",
@@ -23,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
     "next": "15.1.6",
